--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <strong>Christine A. Carlini</strong><br>
                         <strong>CPA, CGMA</strong>
                         <br/>
-                        <a href="/contacts/Christine-Carlini-CPA.vcf" hidefocus="true" style="outline: none;"><img src="img/contactinfo.png"></a>
+                        <a href="contacts/Christine-Carlini-CPA.vcf" hidefocus="true" style="outline: none;"><img src="img/contactinfo.png"></a>
 
                     </p>
                 </div>
@@ -173,7 +173,7 @@
                         <strong>Jeffery M. Carlini</strong><br>
                         <strong>CPA, CFE</strong>
                         <br/>
-                        <a href="/contacts/Jeff-Carlini-CPA.vcf" hidefocus="true" style="outline: none;"><img src="img/contactinfo.png"></a>
+                        <a href="contacts/Jeff-Carlini-CPA.vcf" hidefocus="true" style="outline: none;"><img src="img/contactinfo.png"></a>
                     </p>
                 </div>
                 <div  style="float:right;width: 45%;margin-top:8px;">
@@ -193,23 +193,23 @@
 
                 <div class="address"><a href="http://www.carlinicpa.com">www.carlinicpa.com</a></div></div>
 
-                <img style="margin-right:20px;width:40%;height:auto;float: right;" src="/img/town.jpg"/>
+                <img style="margin-right:20px;width:40%;height:auto;float: right;" src="img/town.jpg"/>
 
             </div></div>
             <div style="clear:both"></div>
             <hr/>
 
 <div class="contact-social">
-    <div class="social-icon"><strong>Follow us:</strong> <br> <a href="https://twitter.com/CarliniCPA" target="_blank" hidefocus="true" style="outline: none;"><img src="/img/btn_twitter.png" alt=""></a>
+    <div class="social-icon"><strong>Follow us:</strong> <br> <a href="https://twitter.com/CarliniCPA" target="_blank" hidefocus="true" style="outline: none;"><img src="img/btn_twitter.png" alt=""></a>
     </div>
 
-    <div class="social-icon"><strong>Join us:</strong> <br> <a href="https://www.facebook.com/CarliniCPA" target="_blank" hidefocus="true" style="outline: none;"><img src="/img/btn_facebook.png" alt=""></a>
+    <div class="social-icon"><strong>Join us:</strong> <br> <a href="https://www.facebook.com/CarliniCPA" target="_blank" hidefocus="true" style="outline: none;"><img src="img/btn_facebook.png" alt=""></a>
     </div>
 
-    <div class="social-icon"><strong>Add us:</strong> <br> <a href="https://www.linkedin.com/company/carlini-cpa" target="_blank" hidefocus="true" style="outline: none;"><img src="/img/btn_linkedin.png" alt=""></a>
+    <div class="social-icon"><strong>Add us:</strong> <br> <a href="https://www.linkedin.com/company/carlini-cpa" target="_blank" hidefocus="true" style="outline: none;"><img src="img/btn_linkedin.png" alt=""></a>
     </div>
 
-    <div class="social-icon"><strong>Join us:</strong> <br> <a href="https://plus.google.com/+Carlinicpa" target="_blank" hidefocus="true" style="outline: none;"><img src="/img/btn_googleplus.png" alt=""></a>
+    <div class="social-icon"><strong>Join us:</strong> <br> <a href="https://plus.google.com/+Carlinicpa" target="_blank" hidefocus="true" style="outline: none;"><img src="img/btn_googleplus.png" alt=""></a>
     </div>
     <div class="clear"></div>
 </div>
