--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
             <!-- <a href="http://maps.apple.com/?q=35.0850099,-80.634675"> </a>-->
             <div id="text-text-12" class="widget-container widget_text"  style="">
                 <div class="textwidget" style="float:left;margin-right:15px;width: 42%;">
-                    <p>
+                    <p><br/>
                         <strong>Christine A. Carlini</strong><br>
                         <strong>CPA, CGMA</strong>
-                        <br/>
-                        <a href="contacts/Christine-Carlini-CPA.vcf" hidefocus="true" style="outline: none;"><img src="img/contactinfo.png"></a>
+                        <!--<br/>
+                        <a href="contacts/Christine-Carlini-CPA.vcf" hidefocus="true" style="outline: none;" download><img src="img/contactinfo.png"></a>-->
 
                     </p>
                 </div>
@@ -169,11 +169,11 @@
                 <div style="clear:both"></div>
                 <br/><br/>
                 <div class="textwidget" style="float:left;margin-right:15px;width: 42%;">
-                    <p>
+                    <p><br/>
                         <strong>Jeffery M. Carlini</strong><br>
                         <strong>CPA, CFE</strong>
-                        <br/>
-                        <a href="contacts/Jeff-Carlini-CPA.vcf" hidefocus="true" style="outline: none;"><img src="img/contactinfo.png"></a>
+                        <!--<br/>
+                        <a href="contacts/Jeff-Carlini-CPA.vcf" hidefocus="true" style="outline: none;" download><img src="img/contactinfo.png"></a>-->
                     </p>
                 </div>
                 <div  style="float:right;width: 45%;margin-top:8px;">
@@ -199,6 +199,35 @@
             <div style="clear:both"></div>
             <hr/>
 
+    <div data-role="content" style="margin-top: -30px;" class="regular">
+        <div class="regular" data-role="collapsibleset" data-theme="a" data-content-theme="a">
+                <div data-role="collapsible">
+                    <h3>Contact Form</h3>
+            <p>
+                <form method="post" action="//formspree.io/james9074@gmail.com">
+                    <span class="form-label">Your Name</span><input type="text" name="name">
+                    <span class="form-label">Your Email</span><input type="text" name="_replyto">
+                    <!--<span class="form-label">Comments</span><input type="text" name="name">-->
+                    <span class="form-label">Service Type Needed</span>
+                    <select>
+                        <option >Tax Preperation</option>
+                        <option >Audit, Review, & Compilation</option>
+                        <option >Bookkeeping</option>
+                        <option >QuickBooks</option>
+                        <option >Payroll</option>
+                        <option >IRS Resolution</option>
+                        <option >Management</option>
+                        <option >Other</option>
+                    </select>
+<br/>
+                    <input type="submit" value="Send">
+                </form>
+            </p>
+                </div>
+        </div>
+            </div>
+
+            <hr/>
 <div class="contact-social">
     <div class="social-icon"><strong>Follow us:</strong> <br> <a href="https://twitter.com/CarliniCPA" target="_blank" hidefocus="true" style="outline: none;"><img src="img/btn_twitter.png" alt=""></a>
     </div>
