--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <div style="clear:both;"></div>
         <hr/>
         <div id="text-text-14" class="widget-container widget_text ">
-                <h3 class="widget-title">Give Us a Call</h3>
+            <a href="tel:7046042101"><h3 style="color:darkred" class="widget-title">Give Us a Call</h3></a>
                 <div class="textwidget">
                 Carlini CPA encourages you to seek our advice if your financial situation changes during the course of the year.  Sometimes a quick phone call can avoid an unexpected surprise later.
                 </div>
