--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
                 <div style="clear:both"></div>
                 <br/><br/>
-                <div class="textwidget" style="float:left;margin-right:15px;width: 43%;">
+                <div class="textwidget" style="float:left;margin-right:15px;width: 42%;">
                     <p><br/>
                         <strong>Jeffery M. Carlini</strong><br>
                         <strong>CPA, CFE</strong>
@@ -181,7 +181,7 @@
                         <a href="contacts/Jeff-Carlini-CPA.vcf" hidefocus="true" style="outline: none;" download><img src="img/contactinfo.png"></a>-->
                     </p>
                 </div>
-                <div  style="float:right;width: 51%;margin-top:8px;">
+                <div  style="float:right;width: 45%;margin-top:8px;">
                     <p>
 
                         Phone: <a onclick="openLink('tel:7046042101');" href="">704.604.2101</a><br>
@@ -198,7 +198,7 @@
 
                 <div class="address"><a onclick="openLink('http://www.carlinicpa.com');" href="">www.carlinicpa.com</a></div></div>
 
-                <img style="margin-right:20px;width:40%;height:auto;float: right;" src="img/town.png"/>
+                <img style="margin-right:20px;width:40%;height:auto;float: right;" src="img/town.jpg"/>
 
             </div></div>
             <div style="clear:both"></div>
