--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
 </head>
 
 
-    <div data-role="page" class="" id="mainPage">
+    <div data-role="page" class="page" id="mainPage">
 
         <div style="margin-top:10px;text-align:center;font-family: Cardo, Georgia, serif;font-size: 17px;">
             <img class="logo" src="img/logo.png"/>
@@ -90,7 +90,7 @@
 
 
 
-    <div data-role="page" class="" id="resourcesPage" data-add-back-btn="true" >
+    <div data-role="page" class="page" id="resourcesPage" data-add-back-btn="true" >
 
         <div style="margin-top:10px;text-align:center;font-family: Cardo, Georgia, serif;font-size: 17px;">
             <img class="logo" src="img/logo.png"/>
@@ -108,7 +108,7 @@
 
 
 
-    <div data-role="page" class="" id="locationPage" data-add-back-btn="true" >
+    <div data-role="page" class="page" id="locationPage" data-add-back-btn="true" >
         <div data-role="header" class="">
             <a href="#mainPage" class="ui-btn ui-icon-delete ui-btn-icon-left" data-rel="back">Cancel</a>
             <h1>Location</h1>
@@ -139,7 +139,7 @@
 
 
 
-    <div data-role="page" class="" id="contactPage" data-add-back-btn="true" >
+    <div data-role="page" class="page" id="contactPage" data-add-back-btn="true" >
         <div data-role="header" class="" >
             <a href="#mainPage" class="">Back</a>
             <h1>Contact</h1>
@@ -276,7 +276,7 @@
 
 
 
-<div data-role="page" class="" id="servicesPage" data-add-back-btn="true" >
+<div data-role="page" class="page" id="servicesPage" data-add-back-btn="true" >
     <div data-role="header" class="" >
         <a href="#mainPage" class="">Back</a>
         <h1>Services</h1>
@@ -355,7 +355,7 @@
 
 
 
-<div data-role="page" class="" id="newsPage" data-add-back-btn="true">
+<div data-role="page" class="page" id="newsPage" data-add-back-btn="true">
     <div data-role="content" class="">
         Test
     </div>
@@ -365,7 +365,7 @@
 
 
 
-<div data-role="page" class="" id="aboutPage" data-add-back-btn="true">
+<div data-role="page" class="page" id="aboutPage" data-add-back-btn="true">
     <div data-role="header" class="" >
         <a href="#mainPage" class="">Back</a>
         <h1>About</h1>
